@@ -1,6 +1,6 @@
 AUX alchemy-9999-build.xml-install.patch 11930 SHA256 3fb687a77f01d5534ee834bcca4457a3d876ba13e8e038ec3418a6ea35cf6a24 SHA512 993ee234a0f71c2d34d995998771d9f221737ec7ddae3a0b883b9ac2205ed1be902b404c90f5f3c98d2683c76b20dea9566ce984ac4e946853f89d9cbcd66a7f WHIRLPOOL 02da0b0729a11c0b5a17fe89aa751eaada9e71017f5b55eb78d8f20da567e3c4e84a9c9f41bb8d27e47ae5343f7ba212d88163f7e900adcab350693c77209989
 AUX alchemy.desktop 141 SHA256 4970db3d47daae3df17ebbabd9443f9b5bd325b6bc8d210d3b1f023538c55753 SHA512 6117975e5a62b98425384e8125c5965b499f357a8949bf163c19216fa4793912a6a25f9fa937c92dc9cccdd534e1756e5b5dd6905dab0bf620b7154f0ae979ca WHIRLPOOL a6d909d62a0f7c995cca6eb803aad3dbc72b9b0b39cfff7f4abb95a1461dfff08c0b0d5911fbf19167a31985658a55860680ea2dd5fde4c6a93a975267d6423e
 AUX build.xml 7956 SHA256 bf9a7bcdf797586180bcae951c2cfa67972fc0482a038167f00a08ae15ecb09b SHA512 3afef6dfaefe69648216c76166605c08b1a5650e504175ef40b6a09cda24d8f63dcd0cc4c2547beae444c95eb223e01bf1e7e4ed512b9af49e84a86a24c623a5 WHIRLPOOL 7ab592b852a48504ca5671209e4cb1ca9810200d0f9df09c3c9351099d2828bb34ba9e809d3fe24631327bc9a44c7c0304da99f7065af175048bf82578422fd9
-EBUILD alchemy-9999.ebuild 1218 SHA256 1397a39e12d58b5e63600b15ba91d72f2b9f55f6208b36820581be84d0d6b645 SHA512 467204b08fd3ef4abf0fafb5ee0f075952b4c918f5f9e1f758dc9ca54d0f4066c6e0ae28319e5761710ade6dd85916a90ff9719c1ce702a44bf5f0ce93cfef83 WHIRLPOOL 38d57279962cdb130c54457488a4a226d5f27d4403f976bfb5e010cb377bd62ea7fc4fc08c4846ab8bbf313a8a363814ff5fdb8b3c121828a67624c37c8a1758
-MISC ChangeLog 184 SHA256 68943fadee790497fe2df47667e23006f1080cbfff87bdc42d9f5f25da60cb7c SHA512 ca876072b8783ee61b0440d17bd01e55feb8c437f7effc977d8bfecf5a350a2175d5944d7e875535a97203418831ed274a732b9399de234d7624c88d4e55aea4 WHIRLPOOL f65a04a28d25befbf6aa368d30e19331beb693686817bba1143c1908901c19c8af9ce511799a2ca7f7e1fb16d74a3524316d418c3d1fdc7efecb5c9077863fe2
+EBUILD alchemy-9999.ebuild 1114 SHA256 74f5c85cef80b51192ac3231fcc7cc29b54ee7deccbc1159ce76712a345f4344 SHA512 f7a1ee4f9032e03e6b307ddd45edf453d6338355a3825b18753351b8dde37b75984767d57754d9c7e92f29b3e04a904874b392efefca685e2b4bcff6f2365c79 WHIRLPOOL cd71550e5db4b65b0f3a3015c62aa6f341b6a30c7a378a79036507638708865cabf182a69ef190a455a3d71285016deb9c0648acf14bb7699ac4708a44196875
+MISC ChangeLog 315 SHA256 bcd804679bf5e6e5907d6680e96ad1373603f700f39925c07e799f72d294d2e1 SHA512 d1c3c9e2286d221ae8cfb483839060e752b25f0aca4731bfc024681fbd22243d97bfdb104bb0e2089f014fadead156e7354ba2f59c6abd481286b1fc27f664ff WHIRLPOOL d677bdf9b068fef3e1857d032dd433a4eca12276bba99c06e18baa730d5d19cc5792175d042557042397f41823259b21c80de2e08d9c211ad1edf7ff2d3e7b24
 MISC metadata.xml 296 SHA256 a720c0349f81b46a3fa5a9d95f460712e3b809b84e77fd9c6775cb62fce80578 SHA512 4d26ebc5aa3838ca5db0463af39ed57ce2be179e83025d36183919b889ea67a7ee35862d6c95bab2a193577c9c30763922611b690f32f74d4aee424984a3a011 WHIRLPOOL d14d81163017596724b6f8aa8b3046693307c3623894e60976be99575604d092416b99b8af99db9a8454f98ef6f493d8d8f94bd31b6db88f6667c1038a22d161
